package mapc.td2.Fichier;

public interface Composite{

    void addChild();
    void removeChild();
    void getChildren();
    void removeChildren();
    
}
