package mapc.td2.Fichier;

public interface FSFactory {

    FSFactory getInstance();
    
}
